fix: style and modal

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,13 @@
   "Главная страница": "Main page",
   "Произошла непредвиденная ошибка": "An unexpected error occurred",
   "Обновить страницу": "Reload page",
-  "Тест ошибок": "Errors test"
+  "Тест ошибок": "Errors test",
+  "Войти": "Login",
+  "Логин": "Login",
+  "Модалка": "Modal",
+  "О Сайте": "About",
+  "Пароль": "Password",
+  "Переключать": "Switch",
+  "Привет": "Hi",
+  "Приветики": "Приветики"
 }
