--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,9 @@
   "О сайте": "О сайте",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
-  "Тест ошибок": "Тест ошибок"
+  "Тест ошибок": "Тест ошибок",
+  "Логин": "Логин",
+  "Модалка": "Модалка",
+  "О Сайте": "О Сайте",
+  "Пароль": "Пароль"
 }
